[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/orange-kid.regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver/GameOverScreen1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Baskic8.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
extra_spacing_top = 14
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.184314, 0.223529, 0.356863, 1 )

[node name="TitleText" type="Label" parent="."]
margin_left = 156.0
margin_top = 56.0
margin_right = 518.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="TopContainer" type="CenterContainer" parent="."]
margin_left = -1.0
margin_top = 19.0
margin_right = 639.0
margin_bottom = 379.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopContainer"]
margin_left = 241.0
margin_top = 145.0
margin_right = 398.0
margin_bottom = 215.0

[node name="ReturnButton" type="Button" parent="TopContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="WinStats" type="Label" parent="TopContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 157.0
margin_bottom = 70.0

[connection signal="pressed" from="TopContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
